workspace/log/build_2023-10-22_21-10-51/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:103:38: error: expected ‘;’ at end of member declaration
  103 |     void send_arming_request(bool arm)Arming
      |                                      ^
      |                                       ;
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:103:39: error: ‘Arming’ does not name a type
  103 |     void send_arming_request(bool arm)Arming
      |                                       ^~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
